<resources>
    <string name="app_name">Drawing Maker</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="colorChanging">colorChanging</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="new_pic">Новый рисунок </string>
    <string name="new_title">Введите заголовок</string>
    <string name="create">Создать</string>
    <string name="last">last</string>
    <string name="next">next</string>
    <string name="fab_description">CreatePic</string>
    <string name="choose_brush_size">Выберите размер кисти:</string>
    <string name="ok">OK</string>
    <string name="choose_brush_opacity">Выберите прозрачность кисти:</string>
    <string name="cancel">Отмена</string>
    <string name="hint">Впишите название рисунка</string>
    <string name="saving_pic">Сохранение рисунка</string>
    <string name="yes">Да</string>
    <string name="deleting">Создать новый рисунок?\n(ты потеряешь текущий рисунок)</string>
    <string name="dp">dp</string>
    <string name="brush_size">Размер кисти:</string>
    <string name="color_choosing">Выбор цвета:</string>
    <string name="saved">Сохранено</string>
    <string name="error">Ошибка</string>
    <string name="searchview">SearchView</string>
</resources>