<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="50sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic"
            android:layout_marginHorizontal="10sp"/>

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="50sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush"
            android:layout_marginHorizontal="10sp"/>

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="50sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser"
            android:layout_marginHorizontal="10sp"/>

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="50sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/save"
            android:layout_marginHorizontal="10sp"/>

        <ImageButton
            android:id="@+id/colorButton"
            android:layout_width="50sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/colorChanging"
            android:src="@drawable/rgbwheel"
            android:layout_marginHorizontal="10sp"/>
    </LinearLayout>

    <com.example.drawingmaker.DrawingView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF" />


</androidx.appcompat.widget.LinearLayoutCompat>