<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pic_creator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_pic"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/new_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"/>


    <Button
        android:id="@+id/newPicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/create" />

</androidx.appcompat.widget.LinearLayoutCompat>
