<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="400sp"
        android:layout_height="30sp"
        android:text="@string/choose_brush_size"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/brush_size"
        android:layout_width="400sp"
        android:layout_height="30sp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <SeekBar
        android:id="@+id/brush_size_seek"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp" />

    <TextView
        android:layout_width="400sp"
        android:layout_height="30sp"
        android:text="@string/choose_brush_opacity"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/brush_opacity"
        android:layout_width="400sp"
        android:layout_height="30sp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <SeekBar
        android:id="@+id/brush_opacity_seek"
        android:layout_width="350sp"
        android:layout_height="wrap_content"

        android:layout_margin="5sp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</androidx.appcompat.widget.LinearLayoutCompat>